Merged package .foreign into the main package